--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- nav bar section -->
     <nav class="nav">
       <div class="nav-container">
-        <img class="logo" src="/asset/Group 23.jpg" alt="logo" />
+        <img class="logo" src="asset/Group 23.jpg" alt="logo" />
         <p class="logo-right">| Blog</p>
         <div class="logo-rightmost">
           <ul>
@@ -18,7 +18,7 @@
               <a href="#"
                 ><img
                   class="icons space"
-                  src="/asset/Polygon 1.png"
+                  src="asset/Polygon 1.png"
                   alt="Archives"
                 />Archives</a
               >
@@ -27,7 +27,7 @@
               <a href="#"
                 ><img
                   class="icons space"
-                  src="/asset/icons8-cart-64 1.png"
+                  src="asset/icons8-cart-64 1.png"
                   alt="Store"
                 />Store</a
               >
@@ -49,7 +49,7 @@
           <div class="search-box">
             <img
               class="search-icon"
-              src="/asset/icons8-search 1.jpg"
+              src="asset/icons8-search 1.jpg"
               alt="search-icon"
             />
             <input
@@ -68,7 +68,7 @@
           </div>
         </div>
         <div class="hero-right">
-          <img class="hero-right-img" src="/asset/Group.png" alt="vector" />
+          <img class="hero-right-img" src="asset/Group.png" alt="vector" />
         </div>
       </div>
     </section>
@@ -78,7 +78,7 @@
     <section class="Latest-Blog">
       <div class="blog-section">
         <div class="blog-img">
-          <img class="latest-img" src="/asset/latest.png" alt="Latest" />
+          <img class="latest-img" src="asset/latest.png" alt="Latest" />
         </div>
         <div class="blog-text">
           <h1 class="blog-title">Latest post heading sample tex..</h1>
